fixes spacing issue with text bubbles

--- a/source/sass/_site.scss
+++ b/source/sass/_site.scss
@@ -687,7 +687,7 @@ $sm-mobile-only: max-width 600px;
         cursor: pointer;
         &::after {
             font-family: Material Icons;
-            margin-left: 0.2m;
+            margin-left: 0.2em;
             font-size: 26px;
             line-height: 0.5;
             color: $gray-10;
